--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "typescript": "^5"
   }
 }
